--- a/pet-profile-web-app/backend/package.json
+++ b/pet-profile-web-app/backend/package.json
@@ -4,7 +4,8 @@
   "description": "The backend REST api for the pet profile web app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "Nodejs",
@@ -20,6 +21,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.13"
+    "mongoose": "^6.0.13",
+    "nodemon": "^2.0.15"
   }
 }
