--- a/pet-profile-web-app/backend/package.json
+++ b/pet-profile-web-app/backend/package.json
@@ -16,12 +16,15 @@
   "author": "Marylene",
   "license": "MIT",
   "devDependencies": {
+    "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "dotenv": "^10.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.13",
-    "nodemon": "^2.0.15"
+    "mongoose": "^6.0.13"
   }
 }
